# simple-shortener

./: Cargo.toml  README.md  cliff.toml  shorten.rest
src/: err.rs  main.rs
